--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 
     <div id="imagesprestations">
         <div class="imagesprestations">
-          <h4>Spot des Rois</h4>
-          <a href="roi.html"><img src="media/ocyx_boss.jpg" alt= "roi"></a>
+          <h4>Check au Rois</h4>
+          <a href="roipop.xml"><img src="media/ocyx_boss.jpg" alt= "roi"></a>
 
         </div>
 
