--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div id="imagesprestations">
         <div class="imagesprestations">
           <h4>Check au Rois</h4>
-          <a href="roipop.xml"><img src="media/ocyx_boss.jpg" alt= "roi"></a>
+          <a href="roi.php"><img src="media/ocyx_boss.jpg" alt= "roi"></a>
 
         </div>
 
