--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
 
  <section id="presentation">
   <div id="texteintro">
-    <h2>Quelques informations sur qui nous sommes</h2>
-    <p>Nous sommes un clan maraudeur à part entière et nous nous considérons comme tel. Chaque membre de la guilde se doit d'acquérir le rite maraudeur le plus rapidement possible (avec notre aide évidemment) afin de facilité les déplacements et les activités de guilde. Nous ne prenons aucunement partie des guerres, n'impliquant pas les maraudeurs.
-      Le but de notre guilde est non seulement de se développer en tant que guilde 100% indépendante d'elle même, mais aussi d'essayer de faire évoluer la faction maraudeur.</p>
+    <h2> faite votre choix!</h2>
+    
   </div>
 
     <div id="presentation">
