--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div id="presentation">
     <div class="imagesprestations">
       <h4>Changement de saison</h4>
-      <a href="changement de saison.html.html"><img src="media/foreur.jpg" alt= "Saison"></a>
+      <a href="changement de saison.html"><img src="media/foreur.jpg" alt= "Saison"></a>
     </div>
 
 
