--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <div id="presentation">
     <div class="imagesprestations">
-      <h4>Changement de saison</h4>
+      <h4>Condition Climatique Forage</h4>
       <a href="changement de saison.html"><img src="media/foreur.jpg" alt= "Saison"></a>
     </div>
 
